# PoC_SemanticTwin

./: .gitignore  AI_PROVIDERS.md  CHANGELOG_MULTI_PROVIDER.md  GUIDE_MISTRAL.md  INSTALL.md  MASTER_TECHNICAL_CHARTER.md  README.md  pyproject.toml
.agent/rules/: project-charter.md  python-stack.md
.agent/workflows/: genesis.md  tune.md  visualize.md
docs/: style.css
semantic_twin_engine/: .env.example  __init__.py  app.py  generate_embedding_scatter.py  generate_report.py  main.py  requirements.txt  server.py  test_provider_config.py  validate_clusters.py  wsgi.py
semantic_twin_engine/config/: TE_settings.yaml  settings.yaml
semantic_twin_engine/core/: __init__.py  config_loader.py  data_manager.py  embedding_store.py  exceptions.py  interfaces.py  job_manager.py  orchestrator.py
semantic_twin_engine/modules/: __init__.py  base_probe.py
semantic_twin_engine/modules/cluster_validator/: __init__.py  logic.py  models.py
semantic_twin_engine/modules/logit_probe/: __init__.py  logic.py
semantic_twin_engine/modules/reporting/: __init__.py  visualizer.py
semantic_twin_engine/modules/vector_probe/: __init__.py  logic.py  models.py
semantic_twin_engine/output/: audit_philip_morris_international_20260121_163405.json  audit_philip_morris_international_20260121_164249.json  audit_philip_morris_international_20260122_154936.json  audit_philip_morris_international_20260122_155135.json  audit_philip_morris_international_20260122_160515.json  audit_philip_morris_international_20260122_161557.json
semantic_twin_engine/output/totalenergies/: audit_totalenergies_20260116_161634.json
semantic_twin_engine/output/visuals/: product_physics_embedding_axis.html  totalenergies_20260116_171638_report.html
